<resources>
    <string name="app_name">Pledge</string>
    <string name="add_pledge_hint"> Not consume single-use plastics.</string>
    <string name="add_pledge_category_textview">Category</string>
    <string name="add_pledge_title">I pledge to:</string>
    <string name="add_pledge_start_text"> Start Date</string>
    <string name="add_pledge_end_text">End Date</string>
    <string name="add_pledge_suggestion">Today\'s Suggestion: I pledge not to eat takeouts.</string>
    <string name="add_pledge_penalty_text">If I don\'t complete this pledge, I will: </string>
    <string name="add_pledge_penalty_hint">Donate $10 to charity. </string>


    <string name="title_pledge">Pledge</string>
    <string name="title_feed">Feed</string>
    <string name="title_discover">Discover</string>
    <string name="invite">Invite Friends</string>
    <string name="group">Your friend\'s number!</string>
    <string name="invite_hint">Your friend\'s number</string>
    <string-array name="add_pledge_category">
        <item>Recycling</item>
        <item>Food Waste</item>
        <item>Gas Consumption</item>
        <item>Plastic Waste</item>
    </string-array>
    <string-array name="add_pledge_pledge" />

</resources>
